# DataScienceHW1

personal_assistant/: .env_example  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
personal_assistant/pa_contacts/: apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/pa_contacts/migrations/: 0001_initial.py  0002_alter_contact_phone.py  0003_contact_user.py
personal_assistant/pa_contacts/templates/pa_contacts/: add.html  edit.html  overview.html
personal_assistant/pa_core/: apps.py  context_processors.py  forms.py  urls.py  views.py
personal_assistant/pa_core/templates/pa_core/: form.html  home.html  overview.html
personal_assistant/pa_file/: apps.py  forms.py  models.py  settings.py  urls.py  views.py
personal_assistant/pa_file/migrations/: 0001_initial.py
personal_assistant/pa_file/templates/pa_file/: overview.html  radios.html  upload.html
personal_assistant/pa_news/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
personal_assistant/pa_news/migrations/: 0001_initial.py
personal_assistant/pa_news/templates/pa_news/: currency.html  (+3 more)
personal_assistant/pa_note/: apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/pa_note/migrations/: 0001_initial.py  0002_note_user.py  0003_note_tags.py
personal_assistant/pa_tag/: apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/pa_tag/migrations/: 0001_initial.py
personal_assistant/pa_user/: apps.py  forms.py  signals.py  urls.py  views.py
personal_assistant/personal_assistant/: settings.py  urls.py
(+13 files in other folders)
