[tool.poetry]
name = "personal-assistant"
version = "1.0.3"
description = "It assists you in organizing the phone book, creating notes, and more."
authors = [
    "Boris Zdorovets <bor.zdorovets28@gmail.com>",
    "Illia Trubnikov <illyatr25@gmail.com>",
    "Nataly Sholohova <n.sholohova27@gmail.com>",
    "Oleksandr Horbatiuk <oleksandr.v.horbatiuk@gmail.com>",
    "Vitaliy Lemanskyi <160911095+mzLeVit@users.noreply.github.com>",
    "Alina Kylymnyk <kylymnykalina111@gmail.com>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "==3.12.*"
django = "^5.1.2"
django-environ = "^0.11.2"
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"
psycopg2-binary = "^2.9.9"
phonenumbers = "^8.13.47"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
requests = "^2.32.3"
db = "^0.1.1"
cloudinary = "^1.41.0"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
